@@ -106,6 +106,8 @@ fake_dns                     = False
 opt_keepalive                = False
 opt_cmc_relfilename          = "config"
 opt_keepalive_fd             = None
+opt_oids                     = []
+opt_extra_oids               = []
 
 # register SIGINT handler for consistenct CTRL+C handling
 def interrupt_handler(signum, frame):
